updated the LocationService to use the refactored exceptions